# py-log-focus

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_log_focus/: __init__.py
tests/: test_log_focus.py
