[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-log-focus"
version = "0.1.2"
description = "Structured log filtering and highlighting for terminals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["logging", "terminal", "color", "highlight", "filter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-log-focus#readme"
Repository = "https://github.com/philiprehberger/py-log-focus"
Issues = "https://github.com/philiprehberger/py-log-focus/issues"
Changelog = "https://github.com/philiprehberger/py-log-focus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_log_focus"]
